[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menu Principal.gd" type="Script" id=1]
[ext_resource path="res://sprites/pixil-layer-Background (3).png" type="Texture" id=2]
[ext_resource path="res://Fonts/Pixel Emulator.otf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/2.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Splash animation"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Splash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.4, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="Menu Principal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Splash animation"
"anims/Splash animation" = SubResource( 1 )

[node name="Fondo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Control" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -297.0
margin_top = -128.0
margin_right = 297.0
custom_constants/separation = 14
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 5.0
margin_right = 594.0
margin_bottom = 47.0
custom_constants/separation = 70
alignment = 1

[node name="BotonJugar" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 133.0
margin_right = 265.0
margin_bottom = 42.0
focus_neighbour_right = NodePath("../BotonSalir")
focus_neighbour_bottom = NodePath("../../CenterContainer/VBoxContainer/ButtonInstrucciones")
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
text = "JUGAR"
flat = true

[node name="BotonSalir" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 335.0
margin_right = 460.0
margin_bottom = 42.0
focus_neighbour_left = NodePath("../BotonJugar")
focus_neighbour_bottom = NodePath("../../CenterContainer/VBoxContainer/ButtonInstrucciones")
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
text = "SALIR"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 61.0
margin_right = 594.0
margin_bottom = 123.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/CenterContainer"]
margin_left = 192.0
margin_right = 402.0
margin_bottom = 62.0

[node name="ButtonInstrucciones" type="Button" parent="Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 18.0
focus_neighbour_top = NodePath("../../../HBoxContainer/BotonJugar")
focus_neighbour_bottom = NodePath("../PantallaCompleta")
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
text = "INSTRUCCIONES"
flat = true

[node name="PantallaCompleta" type="CheckButton" parent="Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 210.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../ButtonInstrucciones")
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover_pressed = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
text = "PANTALLA COMPLETA"

[node name="ControlInstrucciones" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="ControlInstrucciones"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="ControlInstrucciones"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ControlInstrucciones/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 590.0
margin_bottom = 360.0

[node name="LabelInstrucciones" type="Label" parent="ControlInstrucciones/MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 99.0
text = "Usa las teclas Z y C para cambiar de forma.

Presiona Z in el aire mientras eres un cuadrado para un ataque que derrota enemigos y destrulle obstaculos.

Mientras eres un circulo puedes realizar un salto doble"
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="ControlInstrucciones/MarginContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 540.0
margin_bottom = 123.0

[node name="Atras" type="Button" parent="ControlInstrucciones/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 248.0
margin_right = 291.0
margin_bottom = 20.0
shortcut = SubResource( 7 )
text = "atras"

[node name="Splash" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/BotonJugar" to="." method="_on_BotonJugar_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/CenterContainer/VBoxContainer/ButtonInstrucciones" to="." method="_on_ButtonInstrucciones_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/CenterContainer/VBoxContainer/PantallaCompleta" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="ControlInstrucciones/MarginContainer/VBoxContainer/CenterContainer/Atras" to="." method="_on_Atras_pressed"]
